--- a/src/main/resources/public/stylesheets/main.css
+++ b/src/main/resources/public/stylesheets/main.css
@@ -25,3 +25,156 @@
     .jumbotron .lang-logo img {
       max-width: 100%; }
 
+    .sidebar{
+    background: #bed194;
+    color: #fff;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 250px;
+    max-height: none;
+    display: block;
+  }
+  .sidebar a {
+    color: #fff;
+    font-size:25px;
+    display:block;
+    text-decoration: none;
+    width: 250px;
+    height:40px;
+    text-align:center;
+
+}
+.sidebar .logo a {
+    text-decoration: none;
+    color: #fff;
+    font-size:30px;
+    height:60px;
+    margin-top:60px;
+}
+
+.sidebar .logo a:hover{
+    text-decoration: none;
+    text-align:center;
+    margin-top:60px;
+}
+
+
+ .sidebar .menu a:hover{
+/*    position: relative;
+    cursor: pointer;
+    padding: 10px 20px;*/
+    display: table;
+    background-color:#fff;
+    color:#555555;
+    text-decoration: none;
+    text-align:center;
+}
+p{
+    font-size:30px;
+    text-align: center;
+}
+
+.container {
+    margin-left: 200px;
+}
+
+.profile {
+/*    border-radius: 50%;*/
+    border:4px solid #fff;
+}
+
+.menu{
+    margin-top:50px;
+    position:fixed;
+}
+span{
+    color:#555555;
+    font-size:20px;
+}
+.inner{
+    padding: 2em 4em;
+    margin-left:30px;
+}
+p{
+    color:#555555;
+    text-align:left;
+}
+
+textarea{
+    margin-left:2em;
+}
+
+legend{
+    color:#bed194;
+}
+
+
+/* for waterfall*/
+*{padding:0;margin:0;}
+#wrap{
+position:relative;
+margin:0px auto;
+-webkit-column-width:250px;
+-moz-cloumn-width:250px;
+}
+#wrap li{width:250px;display:inline-block;list-style:none;}
+.boxCont{position:relative;margin:15px;border:1px solid #ccc;background:#eee;
+background: -webkit-gradient(linear, 0% 20%, 0% 92%, from(#fff), to(#f3f3f3), color-stop(.1,#fff));
+background: -webkit-linear-gradient(0 0 270deg, #f3f3f3, #f3f3f3 10%, #fff);
+background: -moz-linear-gradient(0 0 270deg, #f3f3f3, #f3f3f3 10%, #fff);
+background: -o-linear-gradient(0 0 270deg, #f3f3f3, #f3f3f3 10%, #fff);
+-webkit-border-radius: 60px / 5px;
+-moz-border-radius: 60px / 5px;
+border-radius:60px / 5px;
+-webkit-box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1) inset;
+-moz-box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1) inset;
+box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1) inset;
+}
+.boxCont:before{
+content:'';
+width: 50px;
+height: 50px;
+top:0; right:0;
+position:absolute;
+display: inline-block;
+z-index:-1;
+-webkit-box-shadow: 10px -10px 8px rgba(0, 0, 0, 0.2);
+-moz-box-shadow: 10px -10px 8px rgba(0, 0, 0, 0.2);
+box-shadow: 10px -10px 8px rgba(0, 0, 0, 0.2);
+-webkit-transform: rotate(2deg) translate(-14px,20px) skew(-20deg);
+-moz-transform: rotate(2deg) translate(-14px,20px) skew(-20deg);
+-o-transform: rotate(2deg) translate(-14px,20px) skew(-20deg);
+transform: rotate(2deg) translate(-14px,20px) skew(-20deg);
+}
+.boxCont:after{
+content: '';
+width: 100px;
+height: 100px;
+top:0; left:0;
+position:absolute;
+z-index:-1;
+display: inline-block;
+-webkit-box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.2);
+-moz-box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.2);
+box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.2);
+-webkit-transform: rotate(2deg) translate(20px,25px) skew(20deg);
+-moz-transform: rotate(2deg) translate(20px,25px) skew(20deg);
+-o-transform: rotate(2deg) translate(20px,25px) skew(20deg);
+transform: rotate(2deg) translate(20px,25px) skew(20deg);
+}
+
+/* for waterfall */.password {
+
+}
+
+.logo {
+}
+
+
+
+
+.menu {
+
+}
