--- a/src/main/resources/spark/template/freemarker/login.html
+++ b/src/main/resources/spark/template/freemarker/login.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <link rel="stylesheet" href="stylesheets/main.css" type="text/css"/>
+        <link rel="stylesheet" href="main.css" type="text/css"/>
 
         <title>Login</title>
         <meta charset="UTF-8">
