--- a/src/main/resources/spark/template/freemarker/messageBoard.html
+++ b/src/main/resources/spark/template/freemarker/messageBoard.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>MySecret</title>
-  <link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
-  <link rel="stylesheet" href="stylesheets/main.css" type="text/css"/>
-  <link rel="stylesheet" href="stylesheets/main.css" type="text/css">
+
+  <link rel="stylesheet" href="main.css" type="text/css">
 
 
 
