--- a/src/main/resources/spark/template/freemarker/schedule.html
+++ b/src/main/resources/spark/template/freemarker/schedule.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <title>MySecret</title>
  
-  <link rel="stylesheet" href="stylesheets/main.css" type="text/css"/>
-  <link rel="stylesheet" href="stylesheets/main.css" type="text/css">
-  <link rel="stylesheet" href="stylesheets/main.css" type="text/css"/>
+  <link rel="stylesheet" href="main.css" type="text/css"/>
+ 
 
 
 
